# GameOfLife

./: CMakeLists.txt  ICOLabs.invite  config.c  config.h  data.c  data.h  ini.c  main.c  preparegif.c  preparegif.h  random.c  random.h  saved_state.c  saved_state.h  simulation.c  simulation.h
